--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ SAsimulate_ECC/data/cifar-10-python.tar.gz
 SAsimulate_cifar10_full/data/cifar-10-python.tar.gz
 SAsimulate_cifar10_full/runs/*
 SAsimulate_cifar10_full/save_weights/*
+SAsimulate_cifar10_numpy/data/cifar-10-python.tar.gz
 *.pt
