--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ resnet18_cifar10_full/runs/*
 resnet18_cifar10_full/save_weights/*
 resnet18_cifar10_numpy/data/cifar-10-python.tar.gz
 resnet18_quantize/data.cifar10/cifar-10-python.tar.gz
+vgg19_cifar10/runs
+
 data/*
 ./runs/*
 *.pt
 *.tar.gz
+*.npy
